[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/HighScore.gd" type="Script" id=1]
[ext_resource path="res://Scenes/stars.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/Raw/8-bit.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="stars" parent="." instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 339.0
margin_top = 110.0
margin_right = 684.0
margin_bottom = 610.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 345.0
margin_bottom = 90.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "High Score"

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_left = 43.0
margin_top = 94.0
margin_right = 301.0
margin_bottom = 162.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "High Score"

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_left = 43.0
margin_top = 166.0
margin_right = 301.0
margin_bottom = 234.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "High Score"

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_left = 43.0
margin_top = 238.0
margin_right = 301.0
margin_bottom = 306.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "High Score"

[node name="Label5" type="Label" parent="VBoxContainer"]
margin_left = 43.0
margin_top = 310.0
margin_right = 301.0
margin_bottom = 378.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "High Score"

[node name="Label6" type="Label" parent="VBoxContainer"]
margin_left = 43.0
margin_top = 382.0
margin_right = 301.0
margin_bottom = 450.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "High Score"

[node name="LinkButton" type="LinkButton" parent="VBoxContainer"]
margin_left = 74.0
margin_top = 454.0
margin_right = 270.0
margin_bottom = 500.0
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )
text = "Main Menu"
underline = 2
script = ExtResource( 4 )
[connection signal="pressed" from="VBoxContainer/LinkButton" to="." method="_on_main_menu_pressed"]
